# battle-pan

./: .gitignore  Cargo.toml  build.rs  word_table.rs
.cargo/: config.toml
build_core/: Cargo.toml
build_core/src/: file.rs  lib.rs  segment_table.rs  word_list.rs  word_table.rs
src/: dictionary.rs  main.rs
