[package]
name = "battle-pan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11.1"
rand = "0.8.5"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
build_core = { path = "./build_core" }